@@ -3,4 +3,6 @@
 
 void set_xkb_layout(const char *command);
 
+void set_xkb_repeat(gboolean repeat, int delay, int interval);
+
 #endif /* _XKB_H */
